src/styles/_navStyles.scss
.nav_black_bg {
  background-color: $black;
  width: 50%;
  position: absolute;
  top: 0;
  right: 0;
  height: 120px;
  z-index: -1;

  @include for-tablet-portrait-down {
    width: 100%;
    height: 80px;
    position: fixed;
    z-index: 2999;
  }

  @include for-phone-only {
    position: fixed;
    top: 0;
    max-width: 375px;
    right: auto;
    left: 0;
    height: 70px;
  }
}

.navbar {
  background-size: 50%;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  width: 100%;
  max-width: 1000px;
  padding: 0 20px 30px 0;
  margin: 0 auto;
  height: 120px;

  @include for-tablet-portrait-down {
    height: 90px;
    position: fixed;
    z-index: 3000;
  }

  @include for-phone-only {
    position: fixed;
    top: 0;
    max-width: 375px;
    padding-right: 0;
    justify-content: space-evenly;
    height: 80px;
  }
}

.navlinks {
  width: 350px;
  display: flex;
  justify-content: space-between;

  @include for-tablet-portrait-down {
    width: 300px;
  }

  a {
    @include navlink_text;

    @include for-tablet-portrait-down {
      font-size: 1.4rem;
    }

    @include for-phone-only {
      font-size: 1rem;
    }

    &:hover {
      color: #ddd;
      transition: 0.3s;
    }
  }

  .active_nav_item {
    color: $green;
    font-weight: bold;

    &:hover {
      color: $green;
      opacity: 0.9;
      transition: 0.3s;
    }
  }
}

